--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+    android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
     package="com.footasylum.digitalsignage">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +15,8 @@
         android:roundIcon="@drawable/footasylum_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
